<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">PerfectShow</string>
	<string name="app_description">It is an image processing app with many awesome features for you to discover!</string>

	<string name="filter_none">Original</string>
	<string name="filter_amaro">Amaro</string>
	<string name="filter_brannan">Brannan</string>
	<string name="filter_brooklyn">Brooklyn</string>
	<string name="filter_Earlybird">EarlyBird</string>
	<string name="filter_freud">Freud</string>
	<string name="filter_hefe">Hefe</string>
	<string name="filter_hudson">Hudson</string>
	<string name="filter_inkwell">Inkwell</string>
	<string name="filter_kevin">Kevin</string>
	<string name="filter_lomo">Lomo</string>
	<string name="filter_n1977">1977</string>
	<string name="filter_nashville">Nashville</string>
	<string name="filter_pixar">Pixar</string>
	<string name="filter_rise">Rise</string>
	<string name="filter_sierra">Sierra</string>
	<string name="filter_sutro">Sutro</string>
	<string name="filter_toastero">Toaster2</string>
	<string name="filter_valencia">Valencia</string>
	<string name="filter_walden">Walden</string>
	<string name="filter_xproii">XproII</string>
	<string name="filter_whitecat">WhiteCat</string>
	<string name="filter_blackcat">BlackCat</string>
	<string name="filter_romance">Romance</string>
	<string name="filter_sakura">Sakura</string>
	<string name="filter_antique">Antique</string>
	<string name="filter_beauty">Beauty</string>
	<string name="filter_calm">Calm</string>
	<string name="filter_cool">Cool</string>
	<string name="filter_emerald">Emerald</string>
	<string name="filter_evergreen">Evergreen</string>
	<string name="filter_fairytale">Fairytale</string>
	<string name="filter_healthy">Healthy</string>
	<string name="filter_latte">Latte</string>
	<string name="filter_nostalgia">Nostalgia</string>
	<string name="filter_tender">Tender</string>
	<string name="filter_warm">Warm</string>
	<string name="filter_sweets">Sweets</string>
	<string name="filter_sunrise">Sunrise</string>
	<string name="filter_sunset">Sunset</string>
	<string name="filter_skinwhiten">SkinWhiten</string>
	<string name="filter_crayon">Crayon</string>
	<string name="filter_sketch">Sketch</string>

	<string name="edit_filter">Filter</string>
	<string name="edit_edit">Edit</string>
	<string name="edit_adds">Adds</string>
	<string name="edit_frame">Frame</string>
	<string name="edit_beauty">Beauty</string>

	<!-- CropImageActivity begin -->
	<string name="main_drawer_load">Load Image for cropping</string>
	<string name="main_drawer_open">Open navigation drawer</string>
	<string name="main_drawer_close">Close navigation drawer</string>

	<string name="result_image_desc">crop result</string>
	<string name="main_action_crop">CROP</string>
	<string name="main_action_rotate">Rotate 90 degrees clockwise</string>
	<string name="drawer_option_title">Crop View Presets</string>
	<string name="drawer_option_oval">Circular</string>
	<string name="drawer_option_rect">Rectangular</string>
	<string name="drawer_option_min_max">Min/Max limits override</string>
	<string name="drawer_option_customized_overlay">Customized Overlay</string>
	<string name="drawer_option_scale_center">Scale Center Inside</string>
	<string name="drawer_option_title2">Customization Toggles</string>
	<string name="drawer_option_toggle_scale">Image Scale: %1s</string>
	<string name="drawer_option_toggle_shape">Crop Shape: %1s</string>
	<string name="drawer_option_toggle_guidelines">Guidelines: %1s</string>
	<string name="drawer_option_toggle_aspect_ratio">Aspect Ratio: %1s</string>
	<string name="drawer_option_toggle_auto_zoom">Auto zoom: %1s</string>
	<string name="drawer_option_toggle_max_zoom">Max zoom level: %1s</string>
	<string name="drawer_option_set_initial_crop_rect">Set initial crop rectangle</string>
	<string name="drawer_option_reset_crop_rect">Reset crop rectangle to initial</string>
	<string name="drawer_option_toggle_show_overlay">Show Overlay: %1s</string>
	<string name="drawer_option_toggle_show_progress_bar">Show Progress Bar: %1s</string>
	<!-- CropImageActivity end -->

	<string name="contrast">Contrast</string>
	<string name="exposure">Exposure</string>
	<string name="vibrance">Vibrance</string>
	<string name="saturation">Saturation</string>
	<string name="sharpness">Sharpness</string>
	<string name="brightness">Brightness</string>
	<string name="hue">Hue</string>
	<string name="lightness">Lightness</string>

	<string name="rgb" translatable="false">RGB</string>
	<string name="hsv" translatable="false">HSV</string>
	<string name="hex" translatable="false">Hex</string>

	<string name="red">R</string>
	<string name="green">G</string>
	<string name="blue">B</string>
	<string name="cyan">C</string>
	<string name="magenta">M</string>
	<string name="yellow">Y</string>

	<string name="prompt">Prompt</string>
	<string name="corrupted_image">Sorry, corrupted image file!</string>
	<string name="no_face_detected">Sorry, no face detected. Please use front face for better result.</string>
	<string name="apply_modification_or_not">Apply modifications or not?</string>

	<string name="preserve_luminosity">Preserve luminosity</string>
	<string name="reset">Reset</string>
	<string name="shadows">Shadows</string>
	<string name="midtones">Midtones</string>
	<string name="highlights">Highlights</string>

	<string name="posterize_levels">Posterize levels</string>
	<string name="image_storage_path">Image storage path</string>
	<string name="color_picker_type">Color picker type</string>
	<string name="color_picker_type_summary">Different styles of displaying the color picker widget, Hue/Saturation/Value/Luminance can be tuned accordingly.</string>
	<string name="alpha_channel">Alpha channel</string>
	<string name="alpha_channel_summary">Enable alpha channel to blending two colors</string>

	<!-- MakeupActivity -->
	<string name="eye_brow">Eye brow</string>
	<string name="eye_lash">Eye lash</string>
	<string name="eye_shadow">Eye shadow</string>
	<string name="iris">Iris</string>
	<string name="nose_shadow">Nose shadow</string>
	<string name="blush">Blush</string>
	<string name="lip_color">Lip color</string>
	<string name="custom">Custom</string>
	<string name="color_picker">Color Picker</string>

	<!-- SettingsActivity -->
	<string name="share_to">Share to</string>
	<string name="share_text">PefectShow, pefect You!</string>
	<string name="download_url" >Download URL:\u0020%1$s</string>
	<string name="application_not_installed">Related application not installed!</string>
	<string name="suggestion_feedback">Suggestion feedback</string>
	<string name="developer_email" translatable="false">834323984@qq.com</string>
	<string name="no_email_app_tip">Please install Email application first or send Email to %1$s directly</string>
	<string name="like_it">Like it</string>
	<string name="others">Others</string>
	<string name="image">Image</string>
	<string name="image_format">Image format</string>
	<string name="image_format_summary">the format of Image to save after modification</string>
	<string name="image_quality">Image quality(valid for JPG format, the bigger, the better quality with bigger size) %1$d</string>
	<string name="color">Color</string>
	<string name="change_theme">Change theme</string>
	<string name="mark">Mark</string>
	
	<string name="back">Back</string>
	<string name="save">Save</string>
	<string name="image_saved_to">Image saved to %1$s</string>
	<string name="select_picture">Select picture(s)</string>
	<string name="picture_unavailable">No pictures available</string>
	<string name="film_strip">Film strip</string>
	<string name="fit_height_to_image">Fit height to image</string>
	<string name="film_height">Film height</string>
	<string name="start_index">Start index</string>
	<string name="show_number_top">Show numbers at image top</string>
	<string name="show_number_bottom">Show numbers at image bottom</string>
	<string name="start_collaging">Start</string>
	<string name="picture_not_enough">At least 2 pictures are needed to collage!</string>
	
	<string name="shrink_or_grow">Shrink/Grow</string>
	<string name="swirl_cw_ccw">Swirl CW/CCW</string>
	<string name="smear">Smear</string>
	
	<!-- BaseActivity -->
	<string name="permission_request">Permission request</string>
	<string name="permission_denied">Permission denied</string>
	<string name="permission_read_external_storage">Storage read permission is required to pick files.</string>
	<string name="permission_write_external_storage">Storage write permission is required to save the image.</string>
	<string name="format_s_result_d_d">%1$s Result (%2$dx%3$d)</string>
	<string name="cannot_retrieve_selected_image">Cannot retrieve selected image</string>
	
	<!-- MainActivity -->
	<string name="collage">Collage</string>
	<string name="crop">Crop</string>
	<string name="makeup">Makeup</string>
	<string name="effect">Effect</string>
	<string name="camera">Camera</string>
	
	<!-- ResultActivity -->
	<string name="image_saved">Image saved</string>
	<string name="image_saved_click_to_preview">Image saved, click to preview.</string>
	<string name="original">Original</string>
	<string name="free">Free</string>
	
	<string name="ratio_1_1" translatable="false">1:1</string>
	<string name="ratio_2_3" translatable="false">2:3</string>
	<string name="ratio_3_4" translatable="false">3:4</string>
	<string name="ratio_9_16" translatable="false">9:16</string>
	<string name="ratio_3_2" translatable="false">3:2</string>
	<string name="ratio_4_3" translatable="false">4:3</string>
	<string name="ratio_16_9" translatable="false">16:9</string>
	
</resources>
